# ocr-server

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: router.py
app/api/routes/: deepseek_router.py  glm_router.py
app/core/: config.py  hardware.py
app/schemas/: ocr.py
app/services/: deepseek_service.py  glm_service.py
notebooks/: deepseek_ocr_inference_4bit.ipynb
results/: result.md
